kubernetes-manifests/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/name: observability
    app.kubernetes.io/part-of: online-boutique
    observability.online-boutique.io/enabled: "true"
